[tool.poetry]
name = "whispertube"
version = "0.1.0"
description = ""
authors = ["Turmaxx <88465473+Turmaxx@users.noreply.github.com>"]
readme = "README.md"
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytube = "^15.0.0"
openai-whisper = "^20230314"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
